2010-06-11  Vadim Kurland  <vadim@vk.crocodile.org>

	* longtextdialog_q.ui, objconflictresolutiondialog_q.ui: fixed
	SF bug #3013735 "invalid pixmap properties during make". Fixed
	uic warnings.

	* IPServiceDialogTest.cpp (IPServiceDialogTest::testIpOptions):
	fixed SF bug #3013855 "various fixes for run_tests". Applied
	patch suggested by Michael J. Slifcak (with changes).

	* DiscoveryDruid.cpp (DiscoveryDruid::browseForImport): fixed SF
	bug #3013532 "file chooser dialog for import policy does not show
	all files".

	* IPTImporter.cpp (IPTImporter::finalize): fixed #1513 iptables
	importer should check default policy in standard chains. Importer
	creates rules at the bottom of the policy rule set to reproduce
	default policies in the built-in chains INPUT,OUTPUT,FORWARD.
	These rules are added only when default policy in these chains is
	set to ACCEPT because generated iptables script always sets
	default policies to DROP.  Support for this in the mangle table is
	limited so far, only default policies in PREROUTING, OUTPUT and
	POSTROUTING can be implemented. Rules created for the commands
	that set default policy in chains FORWARD and INPUT will generate
	commands in PREROUTING chain instead. We will try to address this
	in the future if there is sufficient demand.

2010-06-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* applied patch from slif@bellsouth.net to fix compiler
	warnings. Patch applied partially since not all fixes were
	appropriate. fixes #1510

	* IPTImporter.cpp (IPTImporter::pushPolicyRule): fixed #1512 SF
	bug 3012953: iptables importer sometimes does not recognize rule
	with " ESTABLISHED,RELATED ". Parser properly processed iptables
	rules with state "RELATED,ESTABLISHED" but not when states were
	in the opposite order.

	* IPTImporter.cpp (IPTImporter::pushPolicyRule): policy importer
	for iptables can now parse numerical log levels.

	* Importer.cpp (Importer::getUDPService): fixed sourceforge bug