@@ -21,7 +21,7 @@
   <property name="windowTitle" >
    <string>ICMP</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" >
+  <layout class="QGridLayout" name="gridLayout_100" >
    <item row="0" column="0" >
     <widget class="QFrame" name="frame7" >
      <property name="frameShape" >
