@@ -370,7 +370,7 @@ with this address:</string>
          <property name="title" >
           <string>Built-in installer</string>
          </property>
-         <layout class="QGridLayout" name="gridLayout" >
+         <layout class="QGridLayout" name="gridLayout_102" >
           <item row="0" column="0" >
            <widget class="QLabel" name="label556" >
             <property name="text" >
