@@ -78,7 +78,7 @@
        <iconset resource="MainRes.qrc" >
         <normaloff>:/Icons/Options</normaloff>:/Icons/Options</iconset>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout" >
+      <layout class="QGridLayout" name="gridLayout_113" >
        <item row="0" column="0" >
         <widget class="QLabel" name="label" >
          <property name="sizePolicy" >
